--- a/app/views/prescriptions/_repeats_monthly_options.html.haml
+++ b/app/views/prescriptions/_repeats_monthly_options.html.haml
@@ -1,4 +1,4 @@
-%fieldset{ id: 'repeats_monthly_options', class: 'prescription_options'}
+%fieldset{ id: 'repeats_monthly_options', class: 'prescription_option'}
   = f.number_field :repeats_every_n_months
   = f.select :repeats_monthly, Prescription::RepeatMonthlyOptions
   #prescription_repeats_monthly_each.control-group
