--- a/app/views/prescriptions/_repeats_yearly_options.html.haml
+++ b/app/views/prescriptions/_repeats_yearly_options.html.haml
@@ -1,4 +1,4 @@
-%fieldset{ id: 'repeats_yearly_options', class: 'prescription_options'}
+%fieldset{ id: 'repeats_yearly_options', class: 'prescription_option'}
   = f.number_field :repeats_every_n_years
   .control-group
     %label.control-label Each
